# golfcar-path-manager

./: .gitignore  CMakeLists.txt  README.md  test.cpp  test_build.bat  test_build.sh
inc/: lqr_steer_control.h  path_manager.h
lib/: CMakeLists.txt
lib/inc/: cubic_spline_planner.h  curvature_steer_control.h  kalman_filter.h  lqr_pid_control.h  lqr_steer_control.h  model_matrix.h  model_matrix_double.h  path_manager.h  path_manager_def.h  path_tracking_manager.h  pid_control.h  pid_steer_control.h  pid_steer_control2.h  position_filter.h  qformat.h  qformat_c.h  velocity_filter.h  yaw_filter.h
lib/src/: cubic_spline_planner.cpp  curvature_steer_control.cpp  kalman_filter.cpp  lqr_pid_control.cpp  lqr_steer_control.cpp  model_matrix.cpp  model_matrix_double.cpp  path_manager.cpp  path_tracking_manager.cpp  pid_steer_control.cpp  pid_steer_control2.cpp  position_filter.cpp  qformat copy.cpp  qformat.cpp  qformat_c.c  velocity_filter.cpp  yaw_filter.cpp
src/: cubic_spline_planner.cpp  lqr_steer_control.cpp  pid_control.cpp
test/: CMakeLists.txt  model_matrix_double.cpp  model_matrix_double.h  position_filter.cpp  position_filter.h  test.cpp  test2.cpp
